Add timely synchronization, add information whenever MagazieApp is connected to webservice and if webservice has actual data
