# swagger/magazine.json
@@ -1,1 +1,198 @@
-{"swagger":"2.0","info":{"version":"v1","title":"MagazineWebService2"},"host":"localhost:44315","schemes":["https"],"paths":{"/api/Magazine/GetAllProducts":{"get":{"tags":["Magazine"],"operationId":"Magazine_GetAllProducts","consumes":[],"produces":["application/json","text/json","application/xml","text/xml"],"responses":{"200":{"description":"OK","schema":{"type":"array","items":{"$ref":"#/definitions/MagazineEntry"}}}}}},"/api/Magazine/GetProduct/{id}":{"get":{"tags":["Magazine"],"operationId":"Magazine_GetProduct","consumes":[],"produces":["application/json","text/json","application/xml","text/xml"],"parameters":[{"name":"id","in":"path","required":true,"type":"integer","format":"int32"}],"responses":{"200":{"description":"OK","schema":{"type":"object"}}}}},"/api/Magazine/AddMagazineProduct":{"put":{"tags":["Magazine"],"operationId":"Magazine_AddMagazineProduct","consumes":[],"produces":["application/json","text/json","application/xml","text/xml"],"parameters":[{"name":"name","in":"query","required":true,"type":"string"},{"name":"count","in":"query","required":true,"type":"integer","format":"int32"},{"name":"localization","in":"query","required":true,"type":"string"}],"responses":{"200":{"description":"OK","schema":{"type":"object"}}}}},"/api/Magazine/ModifyMagazineProduct/{id}":{"put":{"tags":["Magazine"],"operationId":"Magazine_ModifyMagazineProduct","consumes":[],"produces":["application/json","text/json","application/xml","text/xml"],"parameters":[{"name":"id","in":"path","required":true,"type":"integer","format":"int32"},{"name":"count","in":"query","required":true,"type":"integer","format":"int32"}],"responses":{"200":{"description":"OK","schema":{"type":"object"}}}}},"/api/Magazine/RemoveMagazineProduct/{id}":{"delete":{"tags":["Magazine"],"operationId":"Magazine_RemoveMagazineProduct","consumes":[],"produces":["application/json","text/json","application/xml","text/xml"],"parameters":[{"name":"id","in":"path","required":true,"type":"integer","format":"int32"}],"responses":{"200":{"description":"OK","schema":{"type":"object"}}}}},"/api/Magazine/RemoveAllMagazineProducts":{"delete":{"tags":["Magazine"],"operationId":"Magazine_RemoveAllMagazineProducts","consumes":[],"produces":["application/json","text/json","application/xml","text/xml"],"responses":{"200":{"description":"OK","schema":{"type":"object"}}}}},"/api/SynchronizationForUnit/Synchronize":{"post":{"tags":["SynchronizationForUnit"],"operationId":"SynchronizationForUnit_Synchronize","consumes":[],"produces":["application/json","text/json","application/xml","text/xml"],"responses":{"200":{"description":"OK","schema":{"type":"object"}}}}}},"definitions":{"MagazineEntry":{"type":"object","properties":{"Id":{"format":"int32","type":"integer"},"Name":{"type":"string"},"Count":{"format":"int32","type":"integer"},"Localization":{"type":"string"}}}}}
+{
+  "swagger": "2.0",
+  "info": {
+    "version": "v1",
+    "title": "MagazineWebService2"
+  },
+  "host": "localhost:44315",
+  "schemes": [ "https" ],
+  "paths": {
+    "/api/Magazine/GetAllProducts": {
+      "get": {
+        "tags": [ "Magazine" ],
+        "operationId": "Magazine_GetAllProducts",
+        "consumes": [],
+        "produces": [ "application/json", "text/json", "application/xml", "text/xml" ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": { "$ref": "#/definitions/MagazineEntry" }
+            }
+          }
+        }
+      }
+    },
+    "/api/Magazine/GetProduct/{id}": {
+      "get": {
+        "tags": [ "Magazine" ],
+        "operationId": "Magazine_GetProduct",
+        "consumes": [],
+        "produces": [ "application/json", "text/json", "application/xml", "text/xml" ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": { "type": "object" }
+          }
+        }
+      }
+    },
+    "/api/Magazine/AddMagazineProduct": {
+      "put": {
+        "tags": [ "Magazine" ],
+        "operationId": "Magazine_AddMagazineProduct",
+        "consumes": [],
+        "produces": [ "application/json", "text/json", "application/xml", "text/xml" ],
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "count",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "localization",
+            "in": "query",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": { "type": "object" }
+          }
+        }
+      }
+    },
+    "/api/Magazine/ModifyMagazineProduct/{id}": {
+      "put": {
+        "tags": [ "Magazine" ],
+        "operationId": "Magazine_ModifyMagazineProduct",
+        "consumes": [],
+        "produces": [ "application/json", "text/json", "application/xml", "text/xml" ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "count",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": { "type": "object" }
+          }
+        }
+      }
+    },
+    "/api/Magazine/RemoveMagazineProduct/{id}": {
+      "delete": {
+        "tags": [ "Magazine" ],
+        "operationId": "Magazine_RemoveMagazineProduct",
+        "consumes": [],
+        "produces": [ "application/json", "text/json", "application/xml", "text/xml" ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": { "type": "object" }
+          }
+        }
+      }
+    },
+    "/api/Magazine/RemoveAllMagazineProducts": {
+      "delete": {
+        "tags": [ "Magazine" ],
+        "operationId": "Magazine_RemoveAllMagazineProducts",
+        "consumes": [],
+        "produces": [ "application/json", "text/json", "application/xml", "text/xml" ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": { "type": "object" }
+          }
+        }
+      }
+    },
+    "/api/SynchronizationForUnit/isSynchronize": {
+      "post": {
+        "tags": [ "SynchronizationForUnit" ],
+        "operationId": "SynchronizationForUnit_isSynchronize",
+        "consumes": [],
+        "produces": [ "application/json", "text/json", "application/xml", "text/xml" ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": { "type": "object" }
+          }
+        }
+      }
+    },
+    "/api/SynchronizationForUnit/Synchronize": {
+      "post": {
+        "tags": [ "SynchronizationForUnit" ],
+        "operationId": "SynchronizationForUnit_Synchronize",
+        "consumes": [],
+        "produces": [ "application/json", "text/json", "application/xml", "text/xml" ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": { "type": "object" }
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "MagazineEntry": {
+      "type": "object",
+      "properties": {
+        "Id": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "Name": { "type": "string" },
+        "Count": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "Localization": { "type": "string" }
+      }
+    }
+  }
+}
